# Quantum-Computer-Science

./: .gitignore  README.md  pyproject.toml
01_semester/algorithms-and-data-structures/: OPERATORS.md
01_semester/math_basics/notes/: TRIGONOMETRY.md
01_semester/mechanics/: README.md
01_semester/mechanics/notebooks/: 01_reminder_leson.ipynb
s1/Podstawy_Programowania/: euclidean_algorithm.py
s1/Podstawy_Programowania/tests/: test_euc.py
semester_01/algorithms-and-data-structures/swap_algorithm/: swap_algorithm.c
semester_01/algorithms_and_data_structures/notebooks/: 03_algorithms.ipynb
semester_01/algorithms_and_data_structures/notes/: OPERATORS.md
semester_01/algorithms_and_data_structures/scripts/hw_2/: sorts.c
semester_01/developer_workshop/notes/: LINUX.md
semester_01/developer_workshop/project/: project.ps1
semester_01/math_basics/notes/: ARC.md  NUMBERS.md
semester_01/mechanics/notebooks/: 01_reminder_lesson.ipynb
semester_01/mechanics/notes/: FORMULAS.md
semester_01/programming_basics/C/: absolute_value.c  bank.c  count_all_letters.c  count_single_letter.c  do_while.c  double_max.c  even_and_while.c  fgets.c  fibonacci_sequence.c  number_letter_count.c  ritual.c  strcat.c  sum.c  tab_6x6.c  tab_left.c  tab_right.c  tab_sum_malloc.c
semester_01/programming_basics/C++/: abraham.cpp  boxes.cpp  bubble_sort.cpp  dynamic_fall.cpp  grid_max_sum.cpp  insert_sort.cpp  prime_factors.cpp  quick_sort.cpp  salary_struct.cpp  select_sort.cpp  subset_sum.cpp
semester_02/discrete_math/scripts/: permutations.py
(+21 files in other folders)
